# amd-ext-d3d-rs

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  bindings.txt  release.toml
.github/workflows/: ci.yml  publish.yaml
.metadata/: AmdExtD3D.cpp  emitter.settings.rsp  generate.proj
.metadata/AmdDxExt/: AmdExtD3D.h  AmdExtD3DCommandListMarkerApi.h  AmdExtD3DDeviceApi.h  AmdPix3.h
.windows/winmd/: Amd.Ext.D3D.winmd
api_gen/: Cargo.toml
api_gen/src/: main.rs
src/: Amd.rs  bindings.rs  lib.rs
src/Amd/: mod.rs
src/Amd/Ext/: mod.rs
src/Amd/Ext/D3D/: impl.rs  mod.rs
