[package]
name = "amd-ext-d3d"
version = "0.1.1"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/amd-ext-d3d-rs"
description = "Rust bindings for AMD's DirectX12 modified PIX3 RGP markers"
include = ["src", "LICENSE"]

[dependencies]
anyhow = "1"
libloading = "0.8"

[dependencies.windows-core]
version = "0.50"

[dependencies.windows]
# TODO: Generate these private bindings with windows-core as well?
version = "0.48"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
]

[workspace]
members = ["api_gen"]

[patch.crates-io]
# Make windows compatible with windows-core
windows = { git = "https://github.com/MarijnS95/windows-rs", rev = "66e3dbf29" }
windows-core = { git = "https://github.com/MarijnS95/windows-rs", rev = "66e3dbf29" }
# callback-query-interface
windows-bindgen = { git = "https://github.com/MarijnS95/windows-rs", rev = "66e3dbf29" }
windows-metadata = { git = "https://github.com/MarijnS95/windows-rs", rev = "66e3dbf29" }
